# xffm

./: CMakeLists.txt  ChangeLog  INSTALL  MAKEPO  Makefile.am  README  TODO  autogen.sh  config.h.cmake  configure.ac  cov_model.cpp  iconview.c  mkpkg  testdnd2.c  update-ChangeLog  xffm+.settings.in
autotools/: Makefile.am  configure.ac  install
autotools/autom4te.cache/: traces.0
gtk3/: CMakeLists.txt  TODO  config.h.cmake
gtk3/cmake/: FindlibMagic.cmake  FindlibReadline.cmake  headers.cmake  msgfmt.cmake  programs.cmake
gtk3/po/: POTFILES.in  af.po  am.po  an.po  ang.po  ar.po  as.po  ast.po  az.po  az_IR.po  bal.po  be.po  be@latin.po  bem.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dv.po  dz.po  el.po  en.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  (+137 more)
gtk3/xffm/: icons.h  popover_sample.c  xffm.cc
gtk4/: CMakeLists.txt  config.h.cmake  dumux3.0.ini  history.hh  icons.h  popover_sample.c  structure.ini  structure.xml  xffm.cc
gtk4/cmake/: FindGTK4.cmake  FindlibRSVG.cmake  msgfmt.cmake  programs.cmake  pthreads.cmake
gtk4/common/: common.hh  compat.hh  gio.hh  popup.hh  tooltip.hh  tubo.hh  util.hh  xml.hh
gtk4/completion/: lpterm.hh
gtk4/find/: dialog.hh  fgr.hh  find.hh  signals.hh
gtk4/gtk/: dialogs.hh  gtk.hh  gtk3.hh  pixbufhash.hh  preview.hh
gtk4/po/: POTFILES.in  af.po  am.po  an.po  ang.po  ar.po  as.po  ast.po  az.po  az_IR.po  bal.po  be.po  be@latin.po  bem.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dv.po  dz.po  el.po  en.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  (+134 more)
gtk4/response/: chooserresponse.hh  commandresponse.hh  customresponse.hh  progress.hh
gtk4/samples/: color_sample.c  columnview_sample.c  dnd_sample.c  gridview_sample.c  image_sample.c  menu_sample.c  popover_sample.c
gtk4/share/: CMakeLists.txt
gtk4/xffm/: CMakeLists.txt  TODO  bash.hh  basic.hh  cairo.hh  child.hh  clipboard.hh  css.hh  gio.hh  history.hh  icons.h  menu.hh  openwith.hh  paintable.hh  print.hh  progress.hh  run.hh  runbutton.hh  settings.hh  templates.h  texture.hh  thread.hh  types.h  util.hh  utilbasic.hh  utilpathbar.hh  window.hh  workdir.hh  xffm.cc  xffm.h
modules/: .Makefile.am.swp  Makefile.am  bcrypt.c  combobox-module.c  combobox-module.i  completion.c  dialogs.i  icon-module-hash.i  icon-module-mime.i  icon-module-theme.i  icon-module.c  keybind.xsd  ls.i  mime-module.c  mime-module.h  mime-module.i  mime-mouse_magic.i  mime-zip.c  mimemagic.c  properties-module.c  properties-module.h  properties-module.i  run.c  settings-module.c  settings-module.h  settings-module.i  tagfile.h  xmltree.h  xsdtree.i
src/: Makefile  Makefile.am  base_completion_c.cpp  base_completion_c.hpp  bash_completion_c.cpp  bash_completion_c.hpp  combobox_c.cpp  combobox_c.hpp  completion_c.cpp  completion_c.hpp  csh_completion_c.cpp  csh_completion_c.hpp  data_c.cpp  data_c.hpp  debug.h  dnd_c.cpp  dnd_c.hpp  environment_c.cpp  environment_c.hpp.in  gnu_coreutils_c.cpp  gnu_coreutils_c.hpp  gnu_utils_c.cpp  gnu_utils_c.hpp  gtk_c.cpp  gtk_c.hpp  lite_c.cpp  lite_c.hpp  local_cnp_c.cpp  local_cnp_c.hpp  local_dnd_c.cpp  local_dnd_c.hpp  local_file_info_c.cpp  local_file_info_c.hpp  local_monitor_c.cpp  local_monitor_c.hpp  lpterm_c.cpp  lpterm_c.hpp  main.cpp  main_menu_c.hpp  menu_c.cpp  (+72 more)
structure/: CMakeLists.txt  createini.cc  dnd.hh  parse10.pl  parse11.pl  parse9.pl  parse9a.pl  parse9b.pl  parser.hh  signals.hh  structure.cc  structure.hh  structurewindow.hh  treemodel.hh
xffind/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h  config.h.cmake  config.h.in  config.status  configure  configure.ac  debug.h  fgr+.desktop.in.in  fgr+.settings  fgr+.settings.in  libtool  xffind.appdata.xml
xffind/autom4te.cache/: output.0  requests  traces.0  traces.1
xffind/fgr/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  fgr.spec  fgr.spec.in  libtool  m4
xffind/icons/: Makefile.am
xffind/man/: Makefile.am  fgr+.1
xffind/po/: as.po  bs.po  da.po  dz.po  en_AU.po  es.po  et.po  eu.po  fi.po  fr.po  fy.po  ga.po  gu.po  he.po  hr.po  hsb.po  id.po  io.po  ka.po  kg.po  ks.po  ky.po  mg.po  my.po  nso.po  pt_PT.po  ru.po  si.po  sq.po  sr.po  sr@ijekavianlatin.po  th.po  uz.po  uz@cyrillic.po  zh_CN.po  zu.po
xffind/src/: .Makefile.am.swp  Makefile  Makefile.am  Makefile.in  dialog.hh  fgr.hh  find-module.c  find-module.i  find-module_gui.c  print.hh  pthreadCalls.c  pthreadCalls.h  signals.hh  types.h  xfcairo.hh  xfdialog.hh  xfdialoggui.hh  xffgr.hh  xffind.cc  xffind.cpp  xffind.hh  xfgtk.hh  xfhash.hh  xficons.hh  xfpixbuf.hh  xfprint.hh  xfrun.hh  xfsignals.hh  xftooltip.hh  xfutil.hh
xffm/: CMakeLists.txt  dumux2.12.ini  dumuxbutton.ini  icons.h  structure.ini  types.h  userbutton.ini  xffm.cc
xffm/common/: cairo.hh  clipboard.hh  comboresponse.hh  common.hh  dialog.hh  dnd.hh  entryresponse.hh  gio.hh  gtk.hh  hash.hh  icons.hh  lite.hh  menupopover.hh  mime.hh  mimesuffix.hh  notebook.hh  pixbuf.hh  popup.hh  preview.hh  print.hh  response.hh  run.hh  settings.hh  startup.hh  threadcontrol.hh  tooltip.hh  tubo.hh  types.h  util.hh  xml.hh
xffm/completion/: base.hh  bash.hh  completion.hh  csh.hh  lpterm.hh
xffm/dialog/: dialog.hh  menupopover.hh  settings.hh
xffm/find/: dialog.hh  fgr.hh  find.hh  signals.hh
xffm/fm/: CMakeLists.txt  dialog.hh  fm.hh  iconview.hh  menupopover.hh  notebook.hh  startup.hh  treeview.hh  view.hh  xffm.cc
xffm/gtk/: cairo.hh  dialogs.hh  gtk.hh  gtk3.hh  icons.hh  pixbuf.hh  pixbufhash.hh  preview.hh  xmlmenu.hh
xffm/icons/: CMakeLists.txt
xffm/mime/: lite.hh  mime.hh  mimealiashash.hh  mimeapplication.hh  mimeapplicationhash.hh  mimecommandhash.hh  mimehash.hh  mimemagic.hh  mimesfxhash.hh  mimesuffix.hh  (+1 more)
xffm4/: CMakeLists.txt  bug  config.h.cmake
(+1796 files in other folders)
